--- a/index.html
+++ b/index.html
@@ -7,30 +7,17 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="">
+    <header>
       <nav>
-        <a href="./index.html">
-          <h2>WebStudio</h2>
-        </a>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Студия</a></li>
-          <li>
-            <img
-              src="./images/vector.svg"
-              alt="курсор"
-              width="16"
-              height="16"
-            />
-          </li>
           <li><a href="">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li>
-          <img src="./images/vector.svg" alt="курсор" width="16" height="16" />
-        </li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
@@ -38,84 +25,107 @@
       <!--section1-->
       <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button>Заказать услугу</button>
+        <button type="button">Заказать услугу</button>
       </section>
       <!--section2-->
       <section>
-        <div class="">ВНИМАНИЕ К ДЕТАЛЯМ</div>
-        <div>
-          Идейные соображения, а также начало повседневной работы по
-          формированию позиции.
-        </div>
-        <div class="">ПУНКТУАЛЬНОСТЬ</div>
-        <div>
-          Задача организации, в особенности же рамки и место обучения кадров
-          влечет за собой.
-        </div>
-        <div class="">ПЛАНИРОВАНИЕ</div>
-        <div>
-          Равным образом консультация с широким активом в значительной степени
-          обуславливает.
-        </div>
-        <div class="">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</div>
-        <div>
-          Значимость этих проблем настолько очевидна, что реализация плановых
-          заданий.
-        </div>
+        <h2>Features</h2>
+        <ul>
+          <li>
+            ВНИМАНИЕ К ДЕТАЛЯМ Идейные соображения, а также начало повседневной
+            работы по формированию позиции.
+          </li>
+          <li>
+            ПУНКТУАЛЬНОСТЬ Задача организации, в особенности же рамки и место
+            обучения кадров влечет за собой.
+          </li>
+          <li>
+            ПЛАНИРОВАНИЕ Равным образом консультация с широким активом в
+            значительной степени обуславливает.
+          </li>
+          <li>
+            СОВРЕМЕННЫЕ ТЕХНОЛОГИИ Значимость этих проблем настолько очевидна,
+            что реализация плановых заданий.
+          </li>
+        </ul>
+        <!--section3-->
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="./images/box1.jpg" alt="box1" width="370" height="294" />
+            <img
+              src="./images/box1.jpg"
+              alt="разработка ПО"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img src="./images/box2.jpg" alt="box2" width="370" height="294" />
+            <img
+              src="./images/box2.jpg"
+              alt="адаптация под мобильные устройства"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img src="./images/box3.jpg" alt="box3" width="370" height="294" />
+            <img
+              src="./images/box3.jpg"
+              alt="подборка цвета"
+              width="370"
+              height="294"
+            />
           </li>
         </ul>
       </section>
-      <!--section3-->
+      <!--section4-->
       <section>
         <h2>Наша команда</h2>
         <ul>
           <li>
             <img
-              src="./images/team_card_1.jpg"
+              src="./images/crewmember1.jpg"
               alt="Игорь Демьяненко"
               width="270"
-              height="368"
+              height="260"
             />
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img
-              src="./images/team_card_2.jpg"
+              src="./images/crewmember2.jpg"
               alt="Ольга Репина"
               width="270"
-              height="368"
+              height="260"
             />
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
-              src="./images/team_card_3.jpg"
+              src="./images/crewmember3.jpg"
               alt="Николай Тарасов"
               width="270"
-              height="368"
+              height="260"
             />
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img
-              src="./images/team_card_4.jpg"
+              src="./images/crewmember4.jpg"
               alt="Михаил Ермаков"
               width="270"
-              height="368"
+              height="260"
             />
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <h2>WebStudio</h2>
+      <a href="./index.html">WebStudio</a>
       <address>
         <ul>
           <li>
