--- a/index.html
+++ b/index.html
@@ -5,52 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="header-logo link" href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li class="header-item"><a class="link" href="">Студия</a></li>
+          <li class="header-item"><a class="link" href="">Портфолио</a></li>
+          <li class="header-item"><a class="link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="header-mail">
+          <a class="link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="header-tel link" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
       </ul>
     </header>
     <main>
       <!--section1-->
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-btn" type="button">Заказать услугу</button>
       </section>
       <!--section2-->
-      <section>
-        <h2>Features</h2>
-        <ul>
-          <li>
+      <section class="about">
+        <h2 class="about-features">Features</h2>
+        <ul class="list">
+          <li class="about-features1">
             ВНИМАНИЕ К ДЕТАЛЯМ Идейные соображения, а также начало повседневной
             работы по формированию позиции.
           </li>
-          <li>
+          <li class="about-features2">
             ПУНКТУАЛЬНОСТЬ Задача организации, в особенности же рамки и место
             обучения кадров влечет за собой.
           </li>
-          <li>
+          <li class="about-features3">
             ПЛАНИРОВАНИЕ Равным образом консультация с широким активом в
             значительной степени обуславливает.
           </li>
-          <li>
+          <li class="about-features4">
             СОВРЕМЕННЫЕ ТЕХНОЛОГИИ Значимость этих проблем настолько очевидна,
             что реализация плановых заданий.
           </li>
         </ul>
-        <!--section3-->
+      </section>
+      <!--section3-->
+      <section>
         <h2>Чем мы занимаемся</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/box1.jpg"
@@ -80,7 +97,7 @@
       <!--section4-->
       <section>
         <h2>Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/crewmember1.jpg"
@@ -125,16 +142,20 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a class="link" href="./index.html">WebStudio</a>
       <address>
-        <ul>
+        <ul class="list">
           <li>
-            <a href="https://goo.gl/maps/VBkRAcsPEoHHJ9G79"
+            <a class="link" href="https://goo.gl/maps/VBkRAcsPEoHHJ9G79"
               >г.Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@example.com">info@example.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a class="link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li>
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
