--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >
         </li>
         <li>
-          <a class="header-tel link" href="tel:+380961111111"
+          <a class="header-tel class "link" href="tel:+380961111111"
             >+38 096 111 11 11</a
           >
         </li>
